# https://packaging.python.org/tutorials/packaging-projects/
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
[metadata]
name = pytong
version = 0.0.3
author = Richard C. T. Tong
author_email = rich@tongfamily.com
description = Python Utilities by Rich Tong
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/richtong/pytong
project_urls =
    Bug Tracker = https://github.com/richtong/pytong/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# https://twine.readthedocs.io/en/latest/
[option]
package_dir =
    = src
packages = find:
python_requires = >3.8

[options.packages.find]
where = src
